components/app-configs/mailpit/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: mailpit
  template:
    metadata:
      labels:
        deployment: mailpit
    spec:
      containers:
        - name: mailpit
          image: docker.io/axllent/mailpit:latest
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
          - containerPort: 1025
            protocol: TCP
          - containerPort: 8025
            protocol: TCP
          volumeMounts:
          - mountPath: /data
            name: empty
      volumes:
      - name: empty
        emptyDir: {}
