components/app-configs/mailpit/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailpit
spec:
  ports:
  - name: smtp
    port: 1025
    protocol: TCP
    targetPort: 1025
  - name: web
    port: 8025
    protocol: TCP
    targetPort: 8025
  selector:
    app: mailpit
    deployment: mailpit
  sessionAffinity: None
  type: ClusterIP
