components/app-configs/mailpit/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console
spec:
  port:
    targetPort: web
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mailpit
    weight: 100
  wildcardPolicy: None
